Issue 3287(bug fixes and new changes) (#3460)
Major: fixed a bug where student-run automated test results not showing anything on a student account; Minor: actual_output column in the automated test result table shows nothing instead of NA when there is no output.

Added class for output column in automated test script result table so that the row expands for longer text.

--- a/app/assets/stylesheets/automated_tests.scss
+++ b/app/assets/stylesheets/automated_tests.scss
@@ -34,3 +34,7 @@ span.file_name {
 .test-result > h3 {
   margin-bottom: 0;
 }
+
+.rt-td.hidden {
+  display: block;
+}
