--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -162,3 +162,7 @@ input:focus {
 .rt-td.hidden {
   display: block;
 }
+
+.actual_output {
+  white-space: normal !important;
+}
